[package]
name        = "wavefile"
version     = "0.2.2"
authors     = ["John Ledbetter <john@throttle.io>"]
description = "Simple wavefile parser."
keywords    = ["wav", "wavefile", "wavfile"]
license     = "MIT"
repository  = "https://github.com/ledbettj/wavefile.git"
homepage    = "https://github.com/ledbettj/wavefile.git"
exclude     = [ "fixtures/*" ]

[dependencies]
byteorder = "1.2"
memmap    = "0.7"
